<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    </group>

    <group android:id="@+id/topGroup">
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_helpmain"
            android:title="@string/help" />
        <item
            android:id="@+id/manage"
            android:icon="@drawable/ic_apps"
            android:title="@string/manage_apps" />
        <item
            android:id="@+id/restart"
            android:icon="@drawable/ic_restart"
            android:title="@string/restart_service" />
    </group>


    <group android:id="@+id/centerGroup">
        <item
            android:id="@+id/rate"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_white"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact_us"
            android:title="@string/contact" />

        <item
            android:id="@+id/change_lang"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/language_change" />

    </group>


    <group android:id="@+id/endGroup">

        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/darkmode"
            android:title="@string/dark_mode"
            app:actionLayout="@layout/switch_menu" />


    </group>

</menu>